[project]
name = "fastapi-database-connections"
version = "0.1.0"
description = "Demo of setting up database connections when using FastAPI"
authors = [
    { name = "Dan Clayton", email = "daniel@cl8on.co.uk" }
]
dependencies = [
    "fastapi>=0.111.1",
    "psycopg[pool]>=3.2.1",
    "black>=24.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_database_connections"]
